--- a/scratch/package.json
+++ b/scratch/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "slate": "^0.117.0",
+    "slate-react": "^0.117.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
