--- a/scratch/package.json
+++ b/scratch/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "slate": "^0.117.0",
+    "slate-history": "^0.113.1",
     "slate-react": "^0.117.1",
     "tailwindcss": "^4.1.10"
   },
